# titan-automation-framework

./: .gitignore  .replit  ARCHITECTURE.md  ci_jobs.json  gradle.properties  replit.md  settings.gradle.kts
.agents/memory/: MEMORY.md  android-structure.md  datastore-keys.md  governor-state.md  playback-vision-fix.md  schedule-mode.md  titan-event-fields.md  viewmodel-exported-json.md
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/: .gitignore
app/src/main/: AndroidManifest.xml
app/src/main/assets/workflows/: example_advanced_battle.json  example_generic_form_fill.json  example_nested_sub_login.json  example_nested_workflow.json  example_orb_histogram_branching.json  example_rl_config.json  example_subway_surfer.json
app/src/main/cpp/: CMakeLists.txt  titan_jni.cpp
app/src/main/kotlin/com/titan/automation/: TitanApplication.kt
app/src/main/kotlin/com/titan/automation/core/: Constants.kt  CoroutineScopes.kt  Extensions.kt  Logger.kt  TitanResult.kt
app/src/main/kotlin/com/titan/automation/debug/: DebugSession.kt  ExecutionTracer.kt  FrameDebugger.kt  GestureTimeline.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_tile_titan.xml  ic_titan.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
attached_assets/: Agent_1781544217346.txt  TITAN_AGENT_PROMPT_1781570732867.md  textfile_(1)_1781544217270.txt  textfile_1781544217370.txt
gradle/: libs.versions.toml
scripts/: github-push.sh  setup.sh
(+99 files in other folders)
